# fast_api_test

./: .gitignore  Dockerfile  entry_celery.sh  entry_server.sh  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
api_server/: .env  main.py
api_server/models/: database.py  user.py
api_server/mq_task/: mq_task.py
api_server/routers/: text_rec.py  user.py
api_server/services/: auth.py
cluster_def/: api_server.yaml  celery_task.yaml
