[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["discdisk <chenjiahao0501@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.63.0"
uvicorn = {extras = ["standard"], version = "^0.13.3"}
Pillow = "^8.1.0"
chainer = "^7.7.0"
celery = "^5.0.5"
pymongo = "^3.11.3"
python-jose = {extras = ["cryptography"], version = "^3.2.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.5"
motor = "^2.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
